--- a/.gitignore
+++ b/.gitignore
@@ -9998,3 +9998,4 @@ venv/Lib/site-packages/setuptools-65.5.0.dist-info/RECORD
 venv/Lib/site-packages/setuptools-65.5.0.dist-info/REQUESTED
 venv/Lib/site-packages/setuptools-65.5.0.dist-info/top_level.txt
 venv/Lib/site-packages/setuptools-65.5.0.dist-info/WHEEL
+__pycache__/vars.cpython-311.pyc
